Fixes issue with punchline bubble covering buttons and over lapping elements

--- a/assets/index.css
+++ b/assets/index.css
@@ -72,10 +72,6 @@ h1 {
     border-color: #666 transparent transparent #666;
 }
 
-.punchlineBubble {
-    height: 100%;
-}
-
 .punchlineBubble::before {
     content: ' ';
     position: absolute;
